# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  camera.h  color.h  hittable.h  hittable_list.h  material.h  rt  rt.cpp  sphere.h  utils.h  vec3.h
.cache/clangd/index/: aabb.cpp.A445EB9D86890AE2.idx  aabb.h.C26F1CBC3BABEEEE.idx  bvh.cpp.AD93105BCC7A6A85.idx  bvh.h.584C1FA6A3BBCFAE.idx  camera.cpp.9B08581B5BF99069.idx  camera.h.686FC052B003F892.idx  color.h.C2EAD0C48158C73B.idx  colour.h.BE060BCF21CEA0F5.idx  hittable.h.E743A40DD7659735.idx  hittable_list.cpp.9A782573B0DE0A2E.idx  hittable_list.h.2AEA8481A7E7E2FF.idx  main.cpp.B3AD2D7A81280D94.idx  material.h.FDBD8E851DF24149.idx  moving_sphere.cpp.4B6AAF9086C76D20.idx  moving_sphere.h.0EDA0B5905D59175.idx  ray.cpp.235045D4C98E2D63.idx  ray.h.63A95C88CC9F76B7.idx  rt.cpp.25632150164032B6.idx  sphere.cpp.368C9F7F6AF7B5AC.idx  sphere.h.03121708653575DF.idx  utils.h.A6B7A99C97A35E50.idx  vec3.h.C4C3E29F416DA2DC.idx
include/: aabb.h  aarect.h  box.h  bvh.h  camera.h  colour.h  constant_medium.h  external_stb_image.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  perlin.h  ray.h  scene.h  sphere.h  texture.h  utils.h  vec3.h  xyrect.h
src/: aabb.cpp  aarect.cpp  box.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  hittable.cpp  hittable_list.cpp  main.cpp  moving_sphere.cpp  perlin.cpp  ray.cpp  rt.cpp  scene.cpp  sphere.cpp  texture.cpp  xyrect.cpp
